--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,9 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[dependencies.quicksilver]
+version = "*"
+
 [dependencies]
-quicksilver = "*"
+log = "0.4"
+web_logger = "0.2"
