--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies.quicksilver]
-version = "*"
+version = "0.3"
 
 [dependencies]
 log = "0.4"
