--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,6 @@ version = "0.3"
 [dependencies]
 log = "0.4"
 web_logger = "0.2"
+#typeset = { path = "../typeset" }
+static_ecs = { path = "../static_ecs" }
+#typeset = { git = "https://github.com/mas-yo/typeset.git", branch = "main" }
